2008-12-28  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Add some choppers.

2008-09-30  Matevz Tadel  <matevz.tadel@ijs.si>

	* solar_system.C:
	Add support for the 'direct-step' mode of the SolarSystem.
	Mode and number of planets to generate are now script arguments.

2008-08-11  Matevz Tadel  <matevz.tadel@ijs.si>

	* solar_system.C:
	Add stuff needed to animate the cosmic-balls moving around.
	Add a lamp at stella center.
	Set high emission for star material.

	* tringula.C:
	Whitespace.

2008-07-27  Matevz Tadel  <matevz.tadel@ijs.si>

	* solar_system.C:
	New macro - setup proto solar-system generator/simulator.

2008-07-20  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Add global object 'ScreenDumper* dumper'.
	Add function start_recording() - set up eventor and dumper for
	movie capture.

2008-05-26  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Rename "Matter" to "Metal" for connections and fields.

	Add Exit button.

	Make torus_outside mode somewhat more hilly, leave more triangles
	in the terrain mesh when coarsening it from parametric
	triangulation.

2008-05-24  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Create another field over terrain (energy .vs. matter, or sth).

	Create new main-menu, put sim-str in as sub-menu. Add new sub-menu
	for terrain coloration control.

	Use gRandom for generation of random numbers.

	For sphere_outside mode decreased relative scaling of higher
	frequencies and increased triangulation order. It is more lively
	this way.

2008-05-18  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Separate buttons for energy/matter connections.

2008-04-22  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Add menu entry for connecting two statos.

2008-04-21  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Added DynoCtrl and StatoCtrl menus.

	Import color gradients on start-up.

	* gradients/lin_abstract1.png:
	* gradients/lin_abstract2.png:
	* gradients/lin_abstract3.png: