@@ -1,3 +1,10 @@
+2009-01-11  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	* tringula.C:
+	Add function plot_grav() to display gravity plots of the current
+	surface.
+	Set maximum flyer height for toruses to 5.
+
 2008-12-28  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	* tringula.C:
